--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.1",
     "ext-sqlite3": "*",
+    "ext-pdo": "*",
+    "ext-pdo_sqlite": "*",
     "hellogerard/jobby": "^3.3",
     "telegram-bot/api": "^2.3",
     "paquettg/php-html-parser": "^1.7",
     "vlucas/phpdotenv": "^2.4"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.3"
   },
   "autoload": {
     "psr-4": {
